--- a/app/src/main/res/menu/drawermenu.xml
+++ b/app/src/main/res/menu/drawermenu.xml
@@ -22,10 +22,10 @@
     <group
         android:checkableBehavior="single"
         android:id="@+id/group2">
-        <item android:id="@+id/myaccount" android:title="My Account"  />
         <item android:id="@+id/aboutus" android:title="About Us" />
 
-        <item android:id="@+id/logout" android:title="Logout" />
+        <item android:id="@+id/logout"
+            android:icon="@drawable/logout" android:title="Logout" />
 
     </group>
 
