--- a/app/src/main/res/menu/drawermenu.xml
+++ b/app/src/main/res/menu/drawermenu.xml
@@ -13,7 +13,7 @@
         />
     <item
         android:icon="@drawable/ic_info_black_24dp" android:id="@+id/buybuspass" android:title="Buy Bus Pass" />
-    <item android:id="@+id/transactions" android:title="Transactions" />
+    <item android:id="@+id/transactions" android:icon="@drawable/transaction" android:title="Transactions" />
     <item android:id="@+id/reminder"
         android:icon="@drawable/ic_add_alarm_black_24dp" android:title="Reminder" />
     <item android:id="@+id/busTimePdf" android:icon="@drawable/ic_picture_as_pdf_black_24dp" android:title="Bus Time Table" />
@@ -22,7 +22,7 @@
     <group
         android:checkableBehavior="single"
         android:id="@+id/group2">
-        <item android:id="@+id/aboutus" android:title="About Us" />
+       <item android:id="@+id/aboutus"  android:icon="@drawable/aboutus" android:title="About Us" />
 
         <item android:id="@+id/logout"
             android:icon="@drawable/logout" android:title="Logout" />
