--- a/app/src/main/res/layout/fragment_select_day_place.xml
+++ b/app/src/main/res/layout/fragment_select_day_place.xml
@@ -10,7 +10,8 @@
         android:id="@+id/simpleImageView"
         android:layout_width="fill_parent"
         android:layout_height="@dimen/_150sdp"
-        android:src="@drawable/bus2"
+        android:src="@drawable/back"
+        android:scaleType="centerCrop"
         android:background="#000"
         android:layout_weight="15"/>
 
