--- a/app/src/main/res/layout/fragment_main_page.xml
+++ b/app/src/main/res/layout/fragment_main_page.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:androi="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -9,21 +8,23 @@
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_margin="@dimen/_10sdp"
-        android:layout_marginTop="@dimen/_260sdp"
-        android:layout_weight="33"/>
+        android:layout_height="240dp"
+        android:layout_margin="@dimen/_5sdp"
+        android:layout_weight="33"
+        android:src="@drawable/lnmi"
+        android:scaleType="centerCrop"
+        android:adjustViewBounds="true" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_height="230dp"
         android:orientation="horizontal"
         android:layout_weight="33">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/buyPass"
             android:layout_width="@dimen/_112sdp"
-            android:layout_height="@dimen/_146sdp"
+            android:layout_height="@dimen/_136sdp"
             android:layout_marginLeft="@dimen/_30sdp"
             android:layout_marginTop="@dimen/_10sdp"
             app:cardBackgroundColor="@color/white"
@@ -71,7 +72,7 @@
         <androidx.cardview.widget.CardView
             android:id="@+id/transactions"
             android:layout_width="@dimen/_112sdp"
-            android:layout_height="@dimen/_146sdp"
+            android:layout_height="@dimen/_136sdp"
             android:layout_marginLeft="@dimen/_30sdp"
             android:layout_marginTop="@dimen/_10sdp"
             app:cardBackgroundColor="@color/white"
@@ -118,15 +119,15 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_height="220dp"
         android:layout_weight="33">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/reminder"
             android:layout_width="@dimen/_112sdp"
-            android:layout_height="@dimen/_146sdp"
+            android:layout_height="@dimen/_136sdp"
             android:layout_marginLeft="@dimen/_30sdp"
-            android:layout_marginTop="@dimen/_10sdp"
+            android:layout_marginTop="@dimen/_3sdp"
             app:cardBackgroundColor="@color/white"
             app:cardCornerRadius="@dimen/_25sdp"
             app:cardElevation="@dimen/_5sdp">
@@ -170,9 +171,9 @@
         <androidx.cardview.widget.CardView
             android:id="@+id/button_call"
             android:layout_width="@dimen/_112sdp"
-            android:layout_height="@dimen/_146sdp"
+            android:layout_height="@dimen/_136sdp"
             android:layout_marginLeft="@dimen/_30sdp"
-            android:layout_marginTop="@dimen/_10sdp"
+            android:layout_marginTop="@dimen/_3sdp"
             app:cardBackgroundColor="@color/white"
             app:cardCornerRadius="@dimen/_25sdp"
             app:cardElevation="@dimen/_5sdp">
