--- a/app/src/main/res/layout/fragment_buy_bus_pass.xml
+++ b/app/src/main/res/layout/fragment_buy_bus_pass.xml
@@ -1,78 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:background="@drawable/img"
+    android:weightSum="100">
+
+    <LinearLayout
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:layout_weight="20">
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="300dp"
-        android:layout_height="600dp"
-        android:layout_marginLeft="55dp"
-        android:layout_marginTop="60dp"
+        android:layout_height="580dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="40dp"
         android:orientation="vertical"
-        android:background="@drawable/roundeda">
+        android:background="@drawable/roundeda"
+        android:layout_weight="60"
+        android:weightSum="100">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_marginLeft="40dp"
+            android:gravity="center_horizontal"
             android:text="Buy Bus Pass"
             android:textSize="35sp"
             android:textStyle="bold"
-            android:textColor="@color/red"/>
+            android:textColor="@color/red"
+            android:layout_weight="5"/>
 
         <View
             android:layout_width="match_parent"
             android:layout_height="2dp"
             android:background="@color/grey"
-            android:layout_margin="20dp"/>
+            android:layout_margin="20dp"
+            android:layout_weight="5"/>
 
 
         <TextView
             android:layout_width="200dp"
-            android:layout_height="30dp"
+            android:layout_height="50dp"
             android:layout_marginTop="10dp"
-            android:layout_marginLeft="40dp"
-            android:text="Specify Quantity"
-            android:textSize="20sp"/>
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:layout_gravity="center_horizontal"
+            android:gravity="center_horizontal"
+            android:text="Specific Quantity"
+            android:textSize="20sp"
+            android:layout_weight="10"/>
 
         <LinearLayout
             android:layout_width="200dp"
-            android:layout_height="50dp"
-            android:layout_marginTop="50dp"
-            android:layout_marginLeft="50dp"
-            android:orientation="horizontal">
+            android:layout_height="100dp"
+            android:layout_marginTop="10dp"
+            android:layout_gravity="center_horizontal"
+            android:orientation="horizontal"
+            android:layout_weight="30"
+            >
 
 
             <Button
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_marginTop="0dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="7dp"
+                android:layout_marginLeft="15dp"
                 android:onClick="doMinus"
                 android:id="@+id/minus"
-                android:layout_marginLeft="30dp"
-                android:background="@drawable/minus"/>
+                android:background="@drawable/minus" />
 
             <TextView
+                android:id="@+id/quantity"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:layout_marginTop="3dp"
-                android:gravity="center_horizontal"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="12dp"
                 android:background="@drawable/border"
-                android:id="@+id/quantity"
-                android:text="1"
+                android:gravity="center_horizontal"
 
-                android:textSize="25dp"
-                android:layout_marginLeft="15dp"/>
+                android:text="1"
+                android:textSize="28dp" />
 
             <Button
-                android:layout_width="45dp"
-                android:layout_height="40dp"
+                android:layout_width="55dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="7dp"
                 android:onClick="doPlus"
                 android:id="@+id/plus"
-                android:layout_marginTop="0dp"
-                android:layout_marginLeft="10dp"
-                android:background="@drawable/plus"/>
+                android:layout_marginLeft="15dp"
+                android:background="@drawable/plus" />
 
 
         </LinearLayout>
@@ -81,24 +101,28 @@
             android:layout_width="140dp"
             android:layout_height="40dp"
             android:layout_marginTop="20dp"
-            android:layout_marginLeft="80dp"
+            android:layout_gravity="center_horizontal"
             android:text="Max Quantity: 10"
-            android:textSize="18sp"/>
+            android:textSize="18sp"
+            android:layout_weight="10"/>
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cv11"
             android:layout_width="220dp"
             android:layout_height="50dp"
-            android:layout_marginLeft="40dp"
+            android:layout_gravity="center_horizontal"
             android:layout_marginTop="30dp"
             app:cardBackgroundColor="@color/white"
             app:cardCornerRadius="25dp"
-            app:cardElevation="5dp" >
+            app:cardElevation="5dp"
+            android:layout_weight="10">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:gravity="center_horizontal"
+                android:paddingLeft="5dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -109,21 +133,23 @@
                     android:textSize="18sp"
                     android:layout_marginTop="5dp"/>
 
+
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="Bus Pass : "
+                    android:padding="5dp"
+                    android:textSize="18sp"
+                    android:layout_marginTop="5dp"/>
                 <TextView
                     android:id="@+id/total_pass"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="Total"
-                    android:padding="5dp"
-                    android:textSize="18sp"
-                    android:layout_marginTop="5dp"/>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="Bus Pass"
+                    android:text="1"
                     android:padding="5dp"
                     android:textSize="18sp"
                     android:layout_marginTop="5dp"/>
@@ -136,16 +162,19 @@
             android:id="@+id/cv12"
             android:layout_width="220dp"
             android:layout_height="50dp"
-            android:layout_marginLeft="40dp"
+            android:layout_gravity="center_horizontal"
             android:layout_marginTop="30dp"
             app:cardBackgroundColor="@color/white"
             app:cardCornerRadius="25dp"
-            app:cardElevation="5dp" >
+            app:cardElevation="5dp"
+            android:layout_weight="10">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:gravity="center_horizontal"
+                android:paddingLeft="5dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -171,25 +200,64 @@
 
         </androidx.cardview.widget.CardView>
 
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:gravity="center"
-    android:layout_marginTop="40dp"
-    >
 
-    <Button
-        android:id="@+id/proceed_to_pay"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
+        <Button
+            android:layout_width="140dp"
+            android:layout_height="60dp"
+            android:layout_marginTop="40dp"
+            android:id="@+id/proceed_to_pay"
+            android:layout_marginBottom="20dp"
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/roundedb"
+            android:text="Proceed to pay"
+            android:layout_weight="20"/>
 
-        android:background="@drawable/roundedb"
-        android:text="    Proceed to pay   " />
-</LinearLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_weight="20">
 
     </LinearLayout>
 
 
-</RelativeLayout>
+</LinearLayout>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
