Header File data retrieving

--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:id="@+id/headerxml"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
@@ -49,6 +50,7 @@
                 android:layout_width="150dp"
                 android:layout_height="50dp"
                 android:layout_marginTop="70dp"
+                android:id="@+id/usernamedisplay"
                 android:layout_marginLeft="120dp"
                 android:text="Thanks for using our app"/>
 
