--- a/app/src/main/res/layout/fragment_transaction.xml
+++ b/app/src/main/res/layout/fragment_transaction.xml
@@ -40,8 +40,9 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView1"
+        android:layout_marginLeft="16dp"
         android:layout_width="379dp"
-        android:layout_height="497dp"
-        android:layout_marginBottom="16dp"
-        android:layout_marginTop="160dp"/>
+        android:layout_height="match_parent"
+        android:layout_marginTop="160dp"
+        android:layout_marginBottom="16dp" />
 </RelativeLayout>
