After Payment Activity Successfully Built

--- a/app/src/main/res/layout/activity_checksum.xml
+++ b/app/src/main/res/layout/activity_checksum.xml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:id="@+id/containerchecksum"
+    tools:context=".MainActivity"
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/PaymentStatusDisplay"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/fab_margin"
-        android:gravity="center"
-        android:padding="10dp"
-        android:text="@string/payment_status"
-        android:textSize="18sp"
-        android:textStyle="normal" />
-</LinearLayout>
+<TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="Payment Pending"
+    android:layout_gravity="center_horizontal"
+    android:id="@+id/PaymentStatusDisplay"
+    />
+
+</FrameLayout>
