--- a/app/src/main/res/layout/fragment_transaction.xml
+++ b/app/src/main/res/layout/fragment_transaction.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@drawable/roundgrad"
     android:layout_height="match_parent"
     tools:context=".TransactionFragment">
 
@@ -22,27 +23,14 @@
         android:layout_height="@dimen/_1sdp"
         android:layout_margin="60dp"
         android:background="@color/grey"/>
-<TextView
-    android:id="@+id/string"
-    android:layout_width="140dp"
-    android:layout_height="40dp"
-    android:layout_marginLeft="110dp"
-    android:layout_marginTop="90dp"
-    android:textSize="@dimen/_15sdp"
-    android:text="Money Spent: "/>
 
-    <TextView
-        android:id="@+id/counter"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginLeft="270dp"
-        android:layout_marginTop="90dp" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView1"
-        android:layout_marginLeft="16dp"
         android:layout_width="379dp"
         android:layout_height="match_parent"
-        android:layout_marginTop="160dp"
+        android:layout_below="@+id/textView"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="42dp"
         android:layout_marginBottom="16dp" />
 </RelativeLayout>
