--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -87,7 +87,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Set Reminder"
+                    android:text="Set Alarm"
                     android:textSize="15dp"
                     android:layout_marginLeft="15sp"
 
