--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
     <fragment
         android:id="@id/home"
         android:name="com.example.busspass.MainPageFragment"
-        android:label="Bus Pass"
+        android:label="BussPass"
         tools:layout="@layout/fragment_main_page" >
         <action
             android:id="@+id/action_home_to_buybuspass"
@@ -31,12 +31,12 @@
     <fragment
         android:id="@id/buybuspass"
         android:name="com.example.busspass.BuyBusPassFragment"
-        android:label="Bus Pass"
+        android:label="BussPass"
         tools:layout="@layout/fragment_buy_bus_pass" />
     <fragment
         android:id="@id/transactions"
         android:name="com.example.busspass.TransactionFragment"
-        android:label="Bus Pass"
+        android:label="BussPass"
         tools:layout="@layout/fragment_transaction" />
     <fragment
         android:id="@+id/busTimePdf"
@@ -46,17 +46,17 @@
     <fragment
         android:id="@+id/reminder1"
         android:name="com.example.busspass.ShowSetReminderFragment"
-        android:label="Bus Pass"
+        android:label="BussPass"
         tools:layout="@layout/fragment_show_set_reminder" />
     <fragment
         android:id="@+id/logout"
         android:name="com.example.busspass.LogoutFragment"
-        android:label="Bus Pass"
+        android:label="BussPass"
         tools:layout="@layout/fragment_logout" />
     <fragment
         android:id="@+id/reminder"
         android:name="com.example.busspass.SelectDayPlaceFragment"
-        android:label="Bus Pass"
+        android:label="BussPass"
         tools:layout="@layout/fragment_select_day_place" >
         <action
             android:id="@+id/action_selectDayPlaceFragment_to_reminder1"
