--- a/app/src/main/res/layout/fragment_select_day_place.xml
+++ b/app/src/main/res/layout/fragment_select_day_place.xml
@@ -166,15 +166,15 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="@dimen/_100sdp"
+        android:layout_width="wrap_content"
         android:layout_height="@dimen/_20sdp"
         android:layout_marginTop="@dimen/_10sdp"
         android:layout_weight="10">
 
         <TextView
-            android:layout_width="120dp"
+            android:layout_width="wrap_content"
             android:layout_height="40dp"
-            android:text="Select Arrival"
+            android:text="Select Starting Point"
             android:textStyle="bold"
             android:layout_marginLeft="20dp"/>
 
